--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,31 @@
 /* Add CSS Styling */
+
+/*
+* **All odd numbered elements**: a light red/pink background, and a list of fonts containing `Verdana` and `DejaVu Sans` with `sans-serif` as a fallback
+* **The second element**: blue text and a font size of 36px
+* **The third element**: in addition to the styles for all odd numbered elements, add a font size of 24px
+* **The fourth element**: a light green background, a font size of 24px, and bold
+
+*/
+
+.pinkclass,.thirdclass{
+    background-color: rgba(245, 69, 201, 0.3);
+    font-family: Verdana, "DejaVu Sans" , sans-serif;
+
+}
+.thirdclass{
+    font-size:24px;
+}
+
+#blueid {
+    color: rgba(0,0,255,0.3);
+    font-size: 36px;
+}
+
+#greenid {
+    background-color: rgb(71, 170, 13);
+    font-weight: bold;
+    font-size:24px;
+
+}
+
