--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 15px;
 }
 
 .title {
   background: #e3f4ff;
+  padding:16px;
+  margin:15px;
 }
 
 .content {
   background: #e3f4ff;
+  padding:16px;
+  margin:15px;
 }
 
 .button-container {
+  /*box-sizing: border-box;*/
   background: #e3f4ff;
+  padding: 16px;
+  margin:15px;
+  text-align: center;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
