--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center;    my:don't need this because we have padding*/  
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +31,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+ 
 }
 
 button {
@@ -45,4 +50,22 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  /* justify-content: space-around; */
+  margin: 0px;
+  padding: 0px;
+  gap: 16px;
+
 }
+
+.notification {
+  /* margin-left: auto; */
+}
+
+.right, .left{
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap:16px;
+}
+
