--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+
+
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  padding: 15px;
+  gap: 15px;
 }
 
 .icon {
@@ -33,6 +41,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+
+  
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -66,4 +78,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+
+.block1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: large;
+  font-weight: bold;
+}
+
+.therest {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
