--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,104 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+
+  display: flex;
+  flex-direction: column;
+
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+
+
+
+  font-weight: 900;
+  font-size:32px;
+  padding: 0px 16px;
+/* the following two lines are added to center the header vertivally */
+  display:flex;
+  align-items:center;
+
+
+
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
-  background: royalblue;
+  background: rgb(134, 134, 238);
   box-sizing: border-box;
+  /* flex:1; */
+  padding: 16px;
+  
+
+  /* max-width: 300px; */
+
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  text-align:left;
+
+
+
+
+  width: 200px;
+  /* height:300px; */
+  padding: 16px;
+}
+/* I totally forgot this part for ul: */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+li {
+  /* gap: 16px; */
+  margin-bottom: 8px;
+}
+
+
+.content {
+  flex:1;
+  display: flex;
+
+  /* flex-wrap: wrap; */
+
+}
+
+.cards {
+  
+  gap: 16px;
+  padding: 48px;
+  display: flex;
+  /* flex:1; makes it worse */
+  flex-wrap: wrap;
+  
+
+
 }
